# crew-ai

cofo_ai/: README.md  pyproject.toml  report.md
cofo_ai/src/cofo_ai/: crew.py  main.py
cofo_ai/src/cofo_ai/config/: agents.yaml  tasks.yaml
data/: financials_info.xlsx
